--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "fake-filler",
-  "version": "4.3.1",
+  "version": "v2.0.0",
   "description": "Fills all inputs in a page with dummy data.",
   "scripts": {
     "start": "npm run-script watch",
-    "build": "npm run-script build-prod",
-    "watch": "cross-env NODE_ENV=development webpack -w --config webpack.config.dev.ts",
-    "build-dev": "cross-env NODE_ENV=development webpack --config webpack.config.dev.ts",
-    "build-prod": "cross-env NODE_ENV=production webpack --config webpack.config.prod.ts",
+    "build": "npm run-script build-firefox",
+    "watch": "cross-env NODE_ENV=development BROWSER=firefox webpack -w --config webpack.config.dev.ts",
+    "build-dev": "cross-env NODE_ENV=development BROWSER=firefox webpack --config webpack.config.dev.ts",
+    "build-chrome": "cross-env NODE_ENV=production BROWSER=chrome webpack --config webpack.config.prod.ts",
+    "build-firefox": "cross-env NODE_ENV=production BROWSER=firefox webpack --config webpack.config.prod.ts",
     "clean": "rimraf ./dist",
     "lint": "eslint src/**/*"
   },
@@ -15,83 +16,88 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.5.2",
+    "@faker-js/faker": "^9.6.0",
+    "bootstrap": "^4.6.2",
     "caniuse": "^0.1.3",
-    "caniuse-lite": "^1.0.30001551",
+    "caniuse-lite": "^1.0.30001707",
     "cssesc": "^3.0.0",
-    "file-saver": "^2.0.2",
-    "formik": "^2.2.0",
-    "immer": "^7.0.9",
-    "jquery": "^3.5.1",
-    "moment": "^2.29.1",
+    "file-saver": "^2.0.5",
+    "formik": "^2.4.6",
+    "immer": "^7.0.15",
+    "jquery": "^3.7.1",
+    "lodash-es": "^4.17.21",
+    "moment": "^2.30.1",
     "randexp": "^0.5.3",
-    "react": "^16.13.1",
-    "react-beautiful-dnd": "^13.0.0",
-    "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "react": "^16.14.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-bootstrap": "^1.6.8",
+    "react-dom": "^16.14.0",
+    "react-redux": "^7.2.9",
+    "react-router-dom": "^5.3.4",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-    "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
-    "@types/chrome": "^0.0.248",
-    "@types/copy-webpack-plugin": "^6.0.0",
-    "@types/cssesc": "^3.0.0",
+    "@babel/core": "^7.26.10",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.27.0",
+    "@types/chrome": "^0.0.312",
+    "@types/copy-webpack-plugin": "^6.4.3",
+    "@types/cssesc": "^3.0.2",
     "@types/dotenv-webpack": "^3.0.0",
-    "@types/eslint": "^7.2.4",
-    "@types/file-saver": "^2.0.1",
-    "@types/jquery": "^3.5.2",
-    "@types/node": "^14.11.8",
-    "@types/react": "^16.9.51",
-    "@types/react-beautiful-dnd": "^13.0.0",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-modal": "^3.10.6",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/terser-webpack-plugin": "^4.2.0",
-    "@types/webpack": "^4.41.22",
+    "@types/eslint": "^7.29.0",
+    "@types/file-saver": "^2.0.7",
+    "@types/jquery": "^3.5.32",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^14.18.63",
+    "@types/react": "^16.14.63",
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-dom": "^16.9.25",
+    "@types/react-modal": "^3.16.3",
+    "@types/react-redux": "^7.1.34",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/terser-webpack-plugin": "^4.2.2",
+    "@types/webpack": "^4.41.40",
     "@types/webpack-merge": "^4.1.5",
-    "@typescript-eslint/eslint-plugin": "^4.4.0",
-    "@typescript-eslint/parser": "^4.4.0",
-    "autoprefixer": "^10.0.1",
-    "babel-loader": "^8.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "autoprefixer": "^10.4.21",
+    "babel-loader": "^8.4.1",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.2.1",
-    "cross-env": "^7.0.2",
+    "copy-webpack-plugin": "^6.4.1",
+    "cross-env": "^7.0.3",
     "css-loader": "^4.3.0",
-    "cssnano": "^4.1.10",
+    "cssnano": "^4.1.11",
     "dotenv-webpack": "^3.0.0",
-    "eslint": "^7.11.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-import-resolver-webpack": "^0.13.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.4",
-    "eslint-plugin-react-hooks": "^4.1.2",
-    "file-loader": "^6.1.1",
-    "fork-ts-checker-webpack-plugin": "^5.2.0",
-    "mini-css-extract-plugin": "^1.0.0",
-    "node-sass": "^4.14.1",
-    "postcss-loader": "^4.0.4",
-    "prettier": "^2.1.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-import-resolver-webpack": "^0.13.10",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^5.2.1",
+    "mini-css-extract-plugin": "^1.6.2",
+    "postcss-loader": "^4.3.0",
+    "prettier": "^2.8.8",
+    "raw-loader": "^4.0.2",
     "rimraf": "^3.0.2",
-    "sass-loader": "^10.0.3",
-    "source-map-loader": "^1.1.1",
+    "sass": "^1.86.0",
+    "sass-loader": "^10.5.2",
+    "source-map-loader": "^1.1.3",
     "terser-webpack-plugin": "^4.2.3",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3",
-    "webpack": "^4.44.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.5",
+    "webpack": "^4.47.0",
     "webpack-cli": "^3.3.12",
-    "webpack-merge": "^5.2.0"
+    "webpack-merge": "^5.10.0"
   }
 }
