--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,8 +29,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  build:
-    name: Build
+  build-chrome:
+    name: Build Chrome
     runs-on: ubuntu-latest
     needs: [release]
     steps:
@@ -58,6 +58,23 @@ jobs:
           cd ../
           gh release upload ${{ needs.release.outputs.version }} ./dist/chrome.zip
 
+  build-firefox:
+    name: Build Firefox
+    runs-on: ubuntu-latest
+    needs: [ release ]
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ needs.release.outputs.version }}
+
+      - uses: oven-sh/setup-bun@v2
+
+      - name: Install dependencies
+        run: bun install
+
+      - run: echo "VERSION=${{ needs.release.outputs.version }}" > .env.production
+
       - name: Build Firefox
         run: bun run build-firefox
 
@@ -70,3 +87,24 @@ jobs:
           cd ../
           gh release upload ${{ needs.release.outputs.version }} ./dist/firefox.zip
 
+      - name: "Create source code zip"
+        run: git archive --format=zip --output=sources.zip ${{ needs.release.outputs.version }}
+
+      - name: "web-ext sign AMO"
+        id: web-ext-sign
+        uses: kewisch/action-web-ext@v1
+        with:
+          cmd: sign
+          source: ./dist/firefox.zip
+          sourceCode: sources.zip
+          channel: listed
+          approvalNotes: "Please find more information at https://github.com/buckhamduffy/fake-filler-extension"
+          apiKey: ${{ secrets.AMO_SIGN_KEY }}
+          apiSecret: ${{ secrets.AMO_SIGN_SECRET }}
+          timeout: 900000
+
+      - name: "Attach release assets to release"
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          gh release upload ${{ needs.release.outputs.version }} ${{ steps.web-ext-sign.outputs.target }}
