--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "terser-webpack-plugin": "^4.2.3",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
+    "web-ext": "^8.6.0",
     "webpack": "^4.47.0",
     "webpack-cli": "^3.3.12",
     "webpack-merge": "^5.10.0"
