fix: add delays to prevent vue propagation issues

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,7 @@
     "@typescript-eslint/ban-ts-ignore": ["off"],
     "@typescript-eslint/no-var-requires": ["off"],
     "@typescript-eslint/explicit-module-boundary-types": ["off"],
-    
+
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
 
@@ -67,6 +67,13 @@
     "react/jsx-props-no-spreading": ["off"],
     "react/destructuring-assignment": ["off"],
     "react/jsx-one-expression-per-line": ["off"],
-    "react/jsx-wrap-multilines": ["off"]
+    "react/jsx-wrap-multilines": ["off"],
+    "no-restricted-syntax": [
+      "error",
+      "ForInStatement",
+      "LabeledStatement",
+      "WithStatement"
+    ],
+    "no-await-in-loop": ["off"]
   }
 }
